[gd_scene load_steps=3 format=3 uid="uid://445l5k2yom0c"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_2ypc0"]

[sub_resource type="LabelSettings" id="LabelSettings_q4tkm"]
font_size = 64

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_2ypc0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4625
anchor_top = 0.266667
anchor_right = 0.538781
anchor_bottom = 0.321667
offset_right = 0.359924
offset_bottom = -13.6
grow_horizontal = 2
text = "Bouncer Ball"
label_settings = SubResource("LabelSettings_q4tkm")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VFlowContainer" type="HFlowContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -33.0
offset_right = 91.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="ScoreMode" type="Button" parent="Panel/VFlowContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Score Mode"

[node name="VSeparator" type="VSeparator" parent="Panel/VFlowContainer"]
layout_mode = 2

[node name="FrenzyMode" type="Button" parent="Panel/VFlowContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Score Frenzy Mode"

[node name="VSeparator2" type="VSeparator" parent="Panel/VFlowContainer"]
layout_mode = 2

[node name="TimerMode" type="Button" parent="Panel/VFlowContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Timer Mode"

[node name="VSeparator3" type="VSeparator" parent="Panel/VFlowContainer"]
layout_mode = 2

[node name="FreePlay" type="Button" parent="Panel/VFlowContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Free Play"

[node name="VSeparator4" type="VSeparator" parent="Panel/VFlowContainer"]
layout_mode = 2

[connection signal="pressed" from="Panel/VFlowContainer/ScoreMode" to="." method="_on_score_mode_pressed"]
[connection signal="pressed" from="Panel/VFlowContainer/FrenzyMode" to="." method="_on_frenzy_mode_pressed"]
[connection signal="pressed" from="Panel/VFlowContainer/TimerMode" to="." method="_on_timer_mode_pressed"]
[connection signal="pressed" from="Panel/VFlowContainer/FreePlay" to="." method="_on_free_play_pressed"]
